jenkins/03-jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-http
  namespace: jenkins
  labels:
    app: jenkins
    type: service
spec:
  selector:
    app: jenkins
    type: pod
  ports:
    - port: 8080
      name: jenkins-http

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: jenkins
  labels:
    app: jenkins
    type: service
spec:
  selector:
    app: jenkins
    type: pod
  ports:
    - port: 50000
      name: jenkins-jnlp
